--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "express-session": "^1.13.0",
     "express-validator": "*",
     "jade": "~1.11.0",
-    "mongodb": "*",
-    "mongoose": "*",
+    "cloudant": "1.4.x",
     "morgan": "~1.6.1",
     "multer": "*",
     "passport": "*",
